updating bootstrap version
git-svn-id: svn://svn.code.sf.net/p/jlaunchpad/code/trunk@67 b101193a-aa37-0410-b78f-865dd12e72d7